# adns

./: GPL-vs-LGPL  INSTALL  LICENCE.WAIVERS  Makefile  Makefile.in  README  README.html  TODO  acconfig.h  aclocal.m4  adns_0.1.orig.tar.gz.delta  adns_0.1.orig.tar.gz.id  adns_0.2.orig.tar.gz.delta  adns_0.2.orig.tar.gz.id  adns_0.3.orig.tar.gz.delta  adns_0.3.orig.tar.gz.id  adns_0.4.orig.tar.gz.delta  adns_0.4.orig.tar.gz.id  adns_0.5.orig.tar.gz.delta  adns_0.5.orig.tar.gz.id  adns_0.6.orig.tar.gz.delta  adns_0.6.orig.tar.gz.id  adns_0.7.orig.tar.gz.delta  adns_0.7.orig.tar.gz.id  adns_0.8.orig.tar.gz.delta  adns_0.8.orig.tar.gz.id  adns_0.9.orig.tar.gz.delta  adns_0.9.orig.tar.gz.id  adns_1.0.orig.tar.gz.delta  adns_1.0.orig.tar.gz.id  adns_1.1.orig.tar.gz.delta  adns_1.1.orig.tar.gz.id  adns_1.2.orig.tar.gz.delta  adns_1.2.orig.tar.gz.id  adns_1.3.orig.tar.gz.delta  adns_1.3.orig.tar.gz.id  adns_1.4.orig.tar.gz.delta  adns_1.4.orig.tar.gz.id  changelog  config.cache  (+5 more)
client/: .cvsignore  Makefile  Makefile.in  adh-main.c  adh-opts.c  adh-query.c  adnsheloex.c  adnshost.h  adnslogres.c  adnsresfilter.c  adnstest.c  fanftest.c
debian/: control
dynamic/: Makefile  Makefile.in
regress/: Makefile  Makefile.in  addcases  case-1stservbroken.sys  case-2ndservtcp.sys  case-abbrev.out  case-abbrevto.sys  case-comprinf.sys  case-connfail.sys  case-datapluscname.out  case-datapluscnamewait.out  case-datapluscnamewait.sys  case-flags10.sys  case-formerr.sys  case-lockup.sys  case-longdom0.sys  case-longdom1.sys  case-longdomsrch0.sys  case-longdomsrch1.sys  case-longdomsrch1b.sys  case-longdomsrch2.sys  case-longlab0.sys  case-longlab1.sys  case-mailboxes.out  case-mailboxes.sys  case-manya.sys  case-manyptrwrong.out  case-manyptrwrongrem.out  case-manyptrwrongrem.sys  case-ndots.sys  (+70 more)
(+18 files in other folders)
